Modified All Pages By Ashutosh

--- a/About us.html
+++ b/About us.html
@@ -74,13 +74,16 @@
 
     </header>
 
-  <!-- Hero Section -->
-  <section class="container rounded-4 text-center text-white" style="background: url('assets/orig-19_result.webp') center center/cover no-repeat;" data-aos="zoom-in">
-    <div class="container">
-      <h1 class="display-2 fw-bold" data-aos="fade-down">About Bizfylr</h1>
-      <p class="lead" data-aos="fade-up" data-aos-delay="150">Your trusted partner for hassle-free business setup and global growth.</p>
-    </div>
-  </section>
+ <!-- Hero Section -->
+<section class="container rounded-5 p-5 text-center justify-content-center text-white" style="background: url('assets/orig-19_result.webp') center center/cover no-repeat; min-height: 300px;" data-aos="zoom-in">
+  <div class="container">
+    <h1 class="display-4 fw-bold" data-aos="fade-down">About Bizfylr</h1>
+    <p class="lead" data-aos="fade-up" data-aos-delay="150">
+      Your trusted partner for hassle-free business setup and global growth.
+    </p>
+  </div>
+</section>
+
 
   <!-- About Bizfylr Section -->
   <section class="py-5">
