--- a/Business Compliance.html
+++ b/Business Compliance.html
@@ -76,10 +76,10 @@
 
     </header>
 
-  <!-- Hero Section -->
-  <section class="py-5 text-center text-white" style="background: url('assets/orig-19_result.webp') center center/cover no-repeat;" data-aos="fade-up">
-    <div class="container">
-      <h1 class="display-4 fw-bold">Business Compliance for LLC, INC: Regulations, and Filings Without the Hassle</h1>
+ <!-- Hero Section -->
+  <section class="container rounded-5 p-5 text-center justify-content-center" style="background: url('assets/orig-19_result.webp') center center/cover no-repeat; min-height: 300px;" data-aos="zoom-in">
+    <div class="container d-flex justify-content-center align-items-center">
+      <h1 class="display-4 fw-bold py-5">Business Compliance for LLC, INC: Regulations, and Filings Without the Hassle</h1>
     </div>
   </section>
 
@@ -137,14 +137,71 @@
   </div>
 </section>
 
-<!-- CTA Section -->
-  <section class="py-5 text-white text-center" style="background-image: url('assets/orig-19_result.webp'); background-size: cover; background-position: center;" data-aos="fade-up">
-    <div class="container">
-      <h2 class="mb-3">Ready to Start Your Business?</h2>
-      <p class="mb-4">Let us help you form your LLC and provide the essential services to make your business successful in the USA.</p>
-      <a href="contact.html" class="btn btn-light">Get Started</a>
+<!--footer-->
+<footer class="bg-white text-dark pt-5 pb-3 border-top">
+  <div class="container">
+    <div class="row text-start">
+      <!-- Company Info -->
+      <div class="col-md-4 mb-4">
+       <h4 class="fw-bold text-uppercase" style="font-size: 1.8rem;">
+  <span style="color: #14532d;">BIZ</span><span class="text-success">FYLR</span>
+</h4>
+          Bizfylr is your trusted partner for hassle-free business setup and global growth. 
+          We specialize in launching e-commerce ventures and establishing a strong presence 
+          on top marketplaces, ensuring your business thrives from day one. 
+          Let us handle the complexities so you can focus on success!
+        </p>
+        <p class="mb-1 text-dark">5th floor, Maurya lok complex, Block A, Patna, Bihar 800001</p>
+        <p class="mb-1 text-dark">bizfylr{at}gmail.com</p>
+        <p class="mb-0 text-dark">+91 6202619173</p>
+      </div>
+
+      <!-- Quick Links -->
+      <div class="col-md-2 mb-4">
+        <h5 class="text-success fw-bold">Quick Links</h5>
+        <ul class="list-unstyled">
+          <li><a href="#" class="text-dark text-decoration-none">Home</a></li>
+          <li><a href="#" class="text-dark text-decoration-none">About</a></li>
+          <li><a href="#" class="text-dark text-decoration-none">Contact us</a></li>
+          <li><a href="#" class="text-dark text-decoration-none">FAQs</a></li>
+        </ul>
+      </div>
+
+      <!-- Services -->
+      <div class="col-md-3 mb-4">
+        <h5 class="text-success fw-bold">Services</h5>
+        <ul class="list-unstyled">
+          <li>Business Registration</li>
+          <li>Business Compliance</li>
+          <li>E-commerce Setup</li>
+          <li>E-commerce Management</li>
+          <li>E-marketplace Setup</li>
+          <li>E-marketplace Support</li>
+        </ul>
+      </div>
+
+      <!-- Work Days -->
+      <div class="col-md-3 mb-4">
+        <h5 class="text-success fw-bold">Work Days</h5>
+        <p class="text-dark">We are available with our team at our office from sharp</p>
+        <p class="text-dark"><strong class="text-dark">Mon to Sat:</strong> 10:00 - 19:00</p>
+        <a href="#" class="btn btn-success">Contact Us</a>
+      </div>
     </div>
-  </section>
+
+    <!-- Footer bottom -->
+    <hr>
+    <div class="d-flex justify-content-between align-items-center flex-wrap">
+      <p class="mb-0 fw-bold text-dark">Bizfylr © 2024 All Rights Reserved by Bizfylr</p>
+      <div>
+        <a href="#" class="text-dark me-3"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
+        <a href="#" class="text-dark me-3"><i class="fab fa-instagram"></i></a>
+        <a href="#" class="text-dark"><i class="fab fa-whatsapp"></i></a>
+      </div>
+    </div>
+  </div>
+</footer>
 
   <!-- AOS JS -->
   <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
