--- a/index.html
+++ b/index.html
@@ -690,8 +690,9 @@
     <div class="row text-start">
       <!-- Company Info -->
       <div class="col-md-4 mb-4">
-        <h4 class="fw-bold">BIZ<span class="text-success">FYLR</span></h4>
-        <p class="text-dark">
+       <h4 class="fw-bold text-uppercase" style="font-size: 1.8rem;">
+  <span style="color: #14532d;">BIZ</span><span class="text-success">FYLR</span>
+</h4>
           Bizfylr is your trusted partner for hassle-free business setup and global growth. 
           We specialize in launching e-commerce ventures and establishing a strong presence 
           on top marketplaces, ensuring your business thrives from day one. 
