--- a/contact.html
+++ b/contact.html
@@ -75,12 +75,13 @@
     </header>
 
   <!-- Hero Section -->
-  <section class=" container text-center text-white rounded-5" style="background: url('assets/orig-19_result.webp') center center/cover no-repeat;" data-aos="zoom-in">
-    <div class="container">
-      <h1 class="display-4 fw-bold" data-aos="fade-down">Contact Bizfylr</h1>
-      <p class="lead" data-aos="fade-up">We'd love to hear from you. Reach out to us with any questions or inquiries.</p>
-    </div>
-  </section>
+<section class="container rounded-5 p-5 text-center text-white justify-content-center" style="background: url('assets/orig-19_result.webp') center center/cover no-repeat; min-height: 300px;" data-aos="zoom-in">
+  <div class="container">
+    <h1 class="display-4 fw-bold" data-aos="fade-down">Contact Bizfylr</h1>
+    <p class="lead" data-aos="fade-up">We'd love to hear from you. Reach out to us with any questions or inquiries.</p>
+  </div>
+</section>
+
 
   <!-- Contact Section -->
 
@@ -161,15 +162,71 @@
     </div>
   </section>
 
-  <!-- Footer -->
-  <footer class="text-white text-center py-4" data-aos="fade-up">
-    <p>&copy; 2024 Bizfylr. All Rights Reserved.</p>
-    <div>
-      <a href="https://www.facebook.com" class="text-white me-3"><i class="bi bi-facebook"></i></a>
-      <a href="https://twitter.com" class="text-white me-3"><i class="bi bi-twitter"></i></a>
-      <a href="https://www.instagram.com" class="text-white"><i class="bi bi-instagram"></i></a>
+<!--footer-->
+<footer class="bg-white text-dark pt-5 pb-3 border-top">
+  <div class="container">
+    <div class="row text-start">
+      <!-- Company Info -->
+      <div class="col-md-4 mb-4">
+       <h4 class="fw-bold text-uppercase" style="font-size: 1.8rem;">
+  <span style="color: #14532d;">BIZ</span><span class="text-success">FYLR</span>
+</h4>
+          Bizfylr is your trusted partner for hassle-free business setup and global growth. 
+          We specialize in launching e-commerce ventures and establishing a strong presence 
+          on top marketplaces, ensuring your business thrives from day one. 
+          Let us handle the complexities so you can focus on success!
+        </p>
+        <p class="mb-1 text-dark">5th floor, Maurya lok complex, Block A, Patna, Bihar 800001</p>
+        <p class="mb-1 text-dark">bizfylr{at}gmail.com</p>
+        <p class="mb-0 text-dark">+91 6202619173</p>
+      </div>
+
+      <!-- Quick Links -->
+      <div class="col-md-2 mb-4">
+        <h5 class="text-success fw-bold">Quick Links</h5>
+        <ul class="list-unstyled">
+          <li><a href="#" class="text-dark text-decoration-none">Home</a></li>
+          <li><a href="#" class="text-dark text-decoration-none">About</a></li>
+          <li><a href="#" class="text-dark text-decoration-none">Contact us</a></li>
+          <li><a href="#" class="text-dark text-decoration-none">FAQs</a></li>
+        </ul>
+      </div>
+
+      <!-- Services -->
+      <div class="col-md-3 mb-4">
+        <h5 class="text-success fw-bold">Services</h5>
+        <ul class="list-unstyled">
+          <li>Business Registration</li>
+          <li>Business Compliance</li>
+          <li>E-commerce Setup</li>
+          <li>E-commerce Management</li>
+          <li>E-marketplace Setup</li>
+          <li>E-marketplace Support</li>
+        </ul>
+      </div>
+
+      <!-- Work Days -->
+      <div class="col-md-3 mb-4">
+        <h5 class="text-success fw-bold">Work Days</h5>
+        <p class="text-dark">We are available with our team at our office from sharp</p>
+        <p class="text-dark"><strong class="text-dark">Mon to Sat:</strong> 10:00 - 19:00</p>
+        <a href="#" class="btn btn-success">Contact Us</a>
+      </div>
     </div>
-  </footer>
+
+    <!-- Footer bottom -->
+    <hr>
+    <div class="d-flex justify-content-between align-items-center flex-wrap">
+      <p class="mb-0 fw-bold text-dark">Bizfylr © 2024 All Rights Reserved by Bizfylr</p>
+      <div>
+        <a href="#" class="text-dark me-3"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
+        <a href="#" class="text-dark me-3"><i class="fab fa-instagram"></i></a>
+        <a href="#" class="text-dark"><i class="fab fa-whatsapp"></i></a>
+      </div>
+    </div>
+  </div>
+</footer>
 
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
