--- a/Business Compliance.html
+++ b/Business Compliance.html
@@ -83,8 +83,8 @@
     </div>
   </section>
 
-  <!-- Service Overview Section -->
-<section class="py-5 bg-dark text-white">
+<!-- Service Overview Section -->
+<section class="py-5 text-white" style="background-color: #000;">
   <div class="container text-center">
     <h2 class="mb-5" data-aos="fade-up">Simplify Compliance, Focus on Growth!</h2>
     <div class="row">
