Reagain starting server configuration and navigation bar controlling

--- a/contact.html
+++ b/contact.html
@@ -115,7 +115,7 @@
   <h2 class="mb-4 text-center">Send Us a Message</h2>
   <div class="row justify-content-center">
     <div class="col-md-8">
-      <form id="contactForm" action="https://formspree.io/f/xyzwnrba" method="POST">
+      <form id="contactForm" action="form.php" method="POST">
         <div class="mb-3">
           <label for="name" class="form-label">Full Name</label>
           <input type="text" class="form-control" id="name" name="name" placeholder="Your Name" required>
