--- a/index.html
+++ b/index.html
@@ -583,22 +583,22 @@
       <div class="col-lg-6">
         <div class="bg-dark rounded-5 p-4 shadow">
           <h4 class="text-success text-center mb-4">Get In touch</h4>
-          <form>
+          <form action="form.php" method="POST">
             <div class="mb-3">
               <label class="form-label">Name</label>
-              <input type="text" class="form-control" placeholder="Name" required>
+              <input type="text" class="form-control" name="name" placeholder="Name" required>
             </div>
             <div class="mb-3">
               <label class="form-label">Phone no.</label>
-              <input type="tel" class="form-control" placeholder="📞 Phone no." required>
+              <input type="tel" class="form-control" name="phone" placeholder="📞 Phone no." required>
             </div>
             <div class="mb-3">
               <label class="form-label">Email</label>
-              <input type="email" class="form-control" placeholder="Email" required>
+              <input type="email" class="form-control" name="email" placeholder="Email" required>
             </div>
             <div class="mb-3">
               <label class="form-label">Message</label>
-              <textarea class="form-control" rows="4" placeholder="Message" required></textarea>
+              <textarea class="form-control" rows="4" name="message" placeholder="Message" required></textarea>
             </div>
             <div class="d-grid">
               <button type="submit" class="btn btn-success rounded-pill">Send</button>
