--- a/index.html
+++ b/index.html
@@ -215,87 +215,105 @@
   </h1>
 </div>
 <!--Next Section Services lower part-->
-
 <section class="container-fluid bg-black">
-  <div class="container -fluid">
+  <div class="container-fluid">
     <div class="row justify-content-center gap-3">
-      <div  class="card text-center p-3 modcard text-white" style="width: 300px;">
-        <div class="card-header "><i class="fa-solid fa-file bg-success text-white p-3 rounded" style="font-size: 32px;"></i></div>
+
+      <!-- Business Registration -->
+      <div class="card text-center p-3 modcard text-white" style="width: 300px;">
+        <div class="card-header">
+          <i class="fa-solid fa-building bg-success text-white p-3 rounded" style="font-size: 32px;"></i>
+        </div>
         <div class="card-body">
           <h3 class="h3">Business Registration</h3>
-          <p>From choosing the right business structure to handling LLC registration, EIN and tax filings, we streamline 
-            all legal  requirements for LLCs.</p>
+          <p>From choosing the right business structure to handling LLC registration, EIN and tax filings, we streamline all legal requirements for LLCs.</p>
         </div>
       </div>
+
+      <!-- Business Compliance -->
       <div class="card text-center p-3 modcard text-white" style="width: 300px;">
-        <div class="card-header"><i class="fa-solid fa-file bg-success text-white p-3 rounded" style="font-size: 32px;"></i></div>
+        <div class="card-header">
+          <i class="fa-solid fa-scale-balanced bg-success text-white p-3 rounded" style="font-size: 32px;"></i>
+        </div>
         <div class="card-body">
           <h3 class="h3">Business Compliance</h3>
-          <p>We ensure your business meets all regulatory requirements, including tax filings, licenses, and permits, 
-            to keep you compliant and avoid penalties.</p>
+          <p>Business compliance involves filing taxes, bookkeeping, obtaining licenses, mandatory filings, employment and environmental compliance, and ensuring data protection and security for legal and operational integrity.</p>
         </div>
       </div>
+
+      <!-- Website Development -->
       <div class="card text-center p-3 modcard text-white" style="width: 300px;">
-        <div class="card-header"><i class="fa-solid fa-file bg-success text-white p-3 rounded" style="font-size: 32px;"></i></div>
+        <div class="card-header">
+          <i class="fa-solid fa-code bg-success text-white p-3 rounded" style="font-size: 32px;"></i>
+        </div>
         <div class="card-body">
-          <h3 class="h3">Business Compliance</h3>
-          <p>We ensure your business meets all regulatory requirements, including tax filings, licenses, and permits, 
-            to keep you compliant and avoid penalties.</p>
+          <h3 class="h3">Website Development</h3>
+          <p>Website development involves designing, building, and maintaining websites, including front-end and back-end development, responsive design, content integration, performance optimization, SEO best practices, and ensuring security and scalability for a seamless user experience and online success.</p>
         </div>
       </div>
-      <div class="container">
-    <div class="row justify-content-center gap-3">
-      <div  class="card text-center p-3 modcard text-white" style="width: 300px;">
-        <div class="card-header "><i class="fa-solid fa-file bg-success text-white p-3 rounded" style="font-size: 32px;"></i></div>
-        <div class="card-body">
-          <h3 class="h3">Business Registration</h3>
-          <p>From choosing the right business structure to handling LLC registration, EIN and tax filings, we streamline 
-            all legal  requirements for LLCs.</p>
-        </div>
-      </div>
+    </div>
+
+    <div class="row justify-content-center gap-3 mt-4">
+      <!-- E-commerce Setup -->
       <div class="card text-center p-3 modcard text-white" style="width: 300px;">
-        <div class="card-header"><i class="fa-solid fa-file bg-success text-white p-3 rounded" style="font-size: 32px;"></i></div>
+        <div class="card-header">
+          <i class="fa-solid fa-store bg-success text-white p-3 rounded" style="font-size: 32px;"></i>
+        </div>
         <div class="card-body">
-          <h3 class="h3">Business Compliance</h3>
-          <p>We ensure your business meets all regulatory requirements, including tax filings, licenses, and permits, 
-            to keep you compliant and avoid penalties.</p>
+          <h3 class="h3">E-commerce Setup</h3>
+          <p>We provide comprehensive e-commerce setup services, including online store creation, payment gateway integration, inventory management, platform optimization, and seamless functionality for your digital business.</p>
         </div>
       </div>
+
+      <!-- E-commerce Management -->
       <div class="card text-center p-3 modcard text-white" style="width: 300px;">
-        <div class="card-header"><i class="fa-solid fa-file bg-success text-white p-3 rounded" style="font-size: 32px;"></i></div>
+        <div class="card-header">
+          <i class="fa-solid fa-gear bg-success text-white p-3 rounded" style="font-size: 32px;"></i>
+        </div>
         <div class="card-body">
-          <h3 class="h3">Business Compliance</h3>
-          <p>We ensure your business meets all regulatory requirements, including tax filings, licenses, and permits, 
-            to keep you compliant and avoid penalties.</p>
+          <h3 class="h3">E-Commerce Management</h3>
+          <p>We provide complete e-commerce management services, including order processing, inventory tracking, customer support, marketplace optimization, and performance analysis to grow your online business.</p>
         </div>
       </div>
-      <div class="container">
-    <div class="row justify-content-center gap-3">
-      <div  class="card text-center p-3 modcard text-white" style="width: 300px;">
-        <div class="card-header "><i class="fa-solid fa-file bg-success text-white p-3 rounded" style="font-size: 32px;"></i></div>
-        <div class="card-body">
-          <h3 class="h3">Business Registration</h3>
-          <p>From choosing the right business structure to handling LLC registration, EIN and tax filings, we streamline 
-            all legal  requirements for LLCs.</p>
-        </div>
-      </div>
+
+      <!-- Digital Marketing -->
       <div class="card text-center p-3 modcard text-white" style="width: 300px;">
-        <div class="card-header"><i class="fa-solid fa-file bg-success text-white p-3 rounded" style="font-size: 32px;"></i></div>
+        <div class="card-header">
+          <i class="fa-solid fa-bullhorn bg-success text-white p-3 rounded" style="font-size: 32px;"></i>
+        </div>
         <div class="card-body">
-          <h3 class="h3">Business Compliance</h3>
-          <p>We ensure your business meets all regulatory requirements, including tax filings, licenses, and permits, 
-            to keep you compliant and avoid penalties.</p>
+          <h3 class="h3">Digital Marketing</h3>
+          <p>SEO, Google Ads, Meta Ads, Other Platforms. We run ads keeping ROI and ROAS to keep business profitable. Our Expertise shield businesses from making loss.</p>
         </div>
       </div>
+    </div>
+
+    <div class="row justify-content-center gap-3 mt-4">
+      <!-- E-marketplace Listing -->
       <div class="card text-center p-3 modcard text-white" style="width: 300px;">
-        <div class="card-header"><i class="fa-solid fa-file bg-success text-white p-3 rounded" style="font-size: 32px;"></i></div>
+        <div class="card-header">
+          <i class="fa-solid fa-list bg-success text-white p-3 rounded" style="font-size: 32px;"></i>
+        </div>
         <div class="card-body">
-          <h3 class="h3">Business Compliance</h3>
-          <p>We ensure your business meets all regulatory requirements, including tax filings, licenses, and permits, 
-            to keep you compliant and avoid penalties.</p>
+          <h3 class="h3">E-marketplace Listing</h3>
+          <p>We help businesses grow by listing products on various E-marketplace such as Amazon, Walmart etc and optimize the products to rank top on E-marketplace.</p>
         </div>
       </div>
-    </section>
+
+      <!-- Online Seller Support -->
+      <div class="card text-center p-3 modcard text-white" style="width: 300px;">
+        <div class="card-header">
+          <i class="fa-solid fa-headset bg-success text-white p-3 rounded" style="font-size: 32px;"></i>
+        </div>
+        <div class="card-body">
+          <h3 class="h3">Online Seller Support</h3>
+          <p>Maximize your success on major platforms like Amazon and ebay with our specialized marketplace optimization and management services.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 
     <!-- Counter -->
 <section class="container-fluid bg-black p-5">
@@ -660,7 +678,7 @@
       </h2>
       <div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
         <div class="accordion-body">
-          Bizfylr was founded by a team of experienced professionals with expertise in business compliance, digital marketing, and web technologies.
+          Bizfylr Solutions Private Limited was founded by Tousif Akram.
         </div>
       </div>
     </div>
@@ -674,12 +692,88 @@
       </h2>
       <div id="collapse3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
         <div class="accordion-body">
-          Yes, Bizfylr specializes in helping international entrepreneurs set up businesses in the U.S., including obtaining an EIN and meeting compliance requirements.
+          Yes, Bizfylr specializes in helping non-US residents register their businesses in the USA, providing services such as obtaining an EIN number and setting up a business bank account.
         </div>
       </div>
     </div>
 
-    <!-- Continue questions similarly -->
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="faq2">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2">
+          4.  How long does it take to register an LLC?
+        </button>
+      </h2>
+      <div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+        <div class="accordion-body">
+          LLC registration is completed in 1 day, and EIN takes 5-7 days during normal periods. However, during festival months, processing may take slightly longer.
+        </div>
+      </div>
+    </div>
+
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="faq2">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2">
+          5. How much does it cost to register an LLC with Bizfylr?
+        </button>
+      </h2>
+      <div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+        <div class="accordion-body">
+          Our LLC registration package costs $350 upto $900, which includes all essential services. There are no hidden fees, and we provide a 100% refund guarantee until your LLC is successfully registered.
+        </div>
+      </div>
+    </div>
+
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="faq2">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2">
+          6. What digital marketing services does Bizfylr provide?
+        </button>
+      </h2>
+      <div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+        <div class="accordion-body">
+          Bizfylr offers comprehensive digital marketing services, including SEO, to enhance your online presence and drive traffic to your website.
+        </div>
+      </div>
+    </div>
+
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="faq2">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2">
+          7. Does Bizfylr provide e-commerce website development on Shopify and WooCommerce platforms?
+        </button>
+      </h2>
+      <div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+        <div class="accordion-body">
+          Yes, Bizfylr offers comprehensive e-commerce setup services, including website development on both Shopify and WooCommerce platforms. Our expert team ensures a fast, reliable delivery tailored to your business needs.
+        </div>
+      </div>
+    </div>
+
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="faq2">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2">
+          8. Where is Bizfylr located?
+        </button>
+      </h2>
+      <div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+        <div class="accordion-body">
+          Bizfylr’s registered office is located at C/o Abhishek Kumar, Cant Road, Gari Khana, Khagaul, Patna, Bihar, India, 801105.
+        </div>
+      </div>
+    </div>
+
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="faq2">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2">
+          9. How can I contact Bizfylr for more information?
+        </button>
+      </h2>
+      <div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+        <div class="accordion-body">
+          You can contact Bizfylr via email at bizfylr@gmail.com or by phone at +91 6202619173.
+        </div>
+      </div>
+    </div>
   </div>
   </div>
 </section>
@@ -707,32 +801,33 @@
       <div class="col-md-2 mb-4">
         <h5 class="text-success fw-bold">Quick Links</h5>
         <ul class="list-unstyled">
-          <li><a href="#" class="text-dark text-decoration-none">Home</a></li>
-          <li><a href="#" class="text-dark text-decoration-none">About</a></li>
-          <li><a href="#" class="text-dark text-decoration-none">Contact us</a></li>
-          <li><a href="#" class="text-dark text-decoration-none">FAQs</a></li>
+          <li><a href="index.html" class="text-dark text-decoration-none">Home</a></li>
+          <li><a href="About us.html" class="text-dark text-decoration-none">About</a></li>
+          <li><a href="contact.html" class="text-dark text-decoration-none">Contact us</a></li>
+          <li><a href="FAQs.html" class="text-dark text-decoration-none">FAQs</a></li>
         </ul>
       </div>
 
-      <!-- Services -->
-      <div class="col-md-3 mb-4">
-        <h5 class="text-success fw-bold">Services</h5>
-        <ul class="list-unstyled">
-          <li>Business Registration</li>
-          <li>Business Compliance</li>
-          <li>E-commerce Setup</li>
-          <li>E-commerce Management</li>
-          <li>E-marketplace Setup</li>
-          <li>E-marketplace Support</li>
-        </ul>
-      </div>
+     <!-- Services -->
+<div class="col-md-3 mb-4">
+  <h5 class="text-success fw-bold">Services</h5>
+  <ul class="list-unstyled">
+    <li><a href="Business Registration.html" class="text-dark text-decoration-none">Business Registration</a></li>
+    <li><a href="Business Compliance.html" class="text-dark text-decoration-none">Business Compliance</a></li>
+    <li><a href="E-commerce Setup.Html" class="text-dark text-decoration-none">E-commerce Setup</a></li>
+    <li><a href="E-commerce Managament.html" class="text-dark text-decoration-none">E-commerce Management</a></li>
+    <li><a href="E-Marketplace Operation.html" class="text-dark text-decoration-none">E-marketplace Setup</a></li>
+    <li><a href="E-commerce Setup.Html" class="text-dark text-decoration-none">E-marketplace Support</a></li>
+  </ul>
+</div>
+
 
       <!-- Work Days -->
       <div class="col-md-3 mb-4">
         <h5 class="text-success fw-bold">Work Days</h5>
         <p class="text-dark">We are available with our team at our office from sharp</p>
         <p class="text-dark"><strong class="text-dark">Mon to Sat:</strong> 10:00 - 19:00</p>
-        <a href="#" class="btn btn-success">Contact Us</a>
+        <a href="contact.html" class="btn btn-success">Contact Us</a>
       </div>
     </div>
 
