Index Buttons Modified By Ashutosh

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     and global reach. Trust Bizfylr Solutions Private Limited to streamline your entrepreneurial journey.
   </div>
   <div>
-    <a href="#" class="btn btn-light px-5 py-2 m-5 fw-bold">Contact us</a>
+    <a href="contact.html" class="btn btn-light px-5 py-2 m-5 fw-bold">Contact us</a>
   </div>
   </div>
 </div>
@@ -163,7 +163,7 @@
         <p class="text-white-50">
           Entrepreneurs face challenges like legal compliance, venture setup, and daily operations, often lacking the expertise and resources to manage effectively. Bizfylr Solutions Private Limited addresses these hurdles by offering end-to-end support, streamlining processes, and providing tailored solutions. We empower SMBs to focus on growth while we handle the complexities, ensuring a smooth business journey.
         </p>
-        <a href="#" class="btn btn-light fw-bold mt-3 px-4 py-2 rounded-pill">Know More</a>
+        <a href="Business Registration.html" class="btn btn-light fw-bold mt-3 px-4 py-2 rounded-pill">Know More</a>
       </div>
 
       <!-- Right Image -->
@@ -348,8 +348,7 @@
 
 </section>
 
-<!-- Next section our process  -->
- 
+<!-- Next Section: Our Process -->
 <div class="container-fluid bg-black text-center py-5">
   <div class="mb-3">
     <i class="fas fa-circle-notch icon-circle text-success"></i>
@@ -365,14 +364,22 @@
   <div class="container text-white text-center">
 
     <!-- Step Indicators -->
-    <div class="d-flex justify-content-between align-items-center mb-4">
-      <div class="flex-fill border-top border-secondary"></div>
-      <span class="px-3">01</span>
-      <div class="flex-fill border-top border-secondary"></div>
-      <span class="px-3">02</span>
-      <div class="flex-fill border-top border-secondary"></div>
-      <span class="px-3">03</span>
-      <div class="flex-fill border-top border-secondary"></div>
+    <div class="d-flex justify-content-center mb-4">
+      <div class="d-flex align-items-center">
+        <div class="flex-fill border-top border-secondary"></div>
+        <span class="px-3">01</span>
+        <div class="flex-fill border-top border-secondary"></div>
+      </div>
+      <div class="d-flex align-items-center mx-4">
+        <div class="flex-fill border-top border-secondary"></div>
+        <span class="px-3">02</span>
+        <div class="flex-fill border-top border-secondary"></div>
+      </div>
+      <div class="d-flex align-items-center">
+        <div class="flex-fill border-top border-secondary"></div>
+        <span class="px-3">03</span>
+        <div class="flex-fill border-top border-secondary"></div>
+      </div>
     </div>
 
     <!-- Service Boxes -->
@@ -380,7 +387,7 @@
       <!-- Box 1 -->
       <div class="col-md-4">
         <div class="border border-success rounded-4 p-4 h-100">
-         <i class="fas fa-users text-success fs-1"></i>
+          <i class="fas fa-users text-success fs-1"></i>
           <h5 class="mt-3 fw-bold">Initial Consultation</h5>
           <p>We provide expert guidance and tailored advice to understand your business needs and define the right path for success.</p>
         </div>
@@ -388,7 +395,7 @@
       <!-- Box 2 -->
       <div class="col-md-4">
         <div class="border border-success rounded-4 p-4 h-100">
-         <i class="fas fa-magnifying-glass-chart text-success fs-1"></i>
+          <i class="fas fa-magnifying-glass-chart text-success fs-1"></i>
           <h5 class="mt-3 fw-bold">Market Research</h5>
           <p>Comprehensive analysis of market trends, customer behavior, and competitors to uncover opportunities and inform business decisions.</p>
         </div>
@@ -396,20 +403,19 @@
       <!-- Box 3 -->
       <div class="col-md-4">
         <div class="border border-success rounded-4 p-4 h-100">
-         <i class="fas fa-chart-bar text-success fs-1"></i>
+          <i class="fas fa-chart-bar text-success fs-1"></i>
           <h5 class="mt-3 fw-bold">Strategy Development</h5>
-          <p>We craft actionable business strategies focused on growth, efficiency, and achieving long-term goals 
-            in a competitive market.</p>
+          <p>We craft actionable business strategies focused on growth, efficiency, and achieving long-term goals in a competitive market.</p>
         </div>
       </div>
     </div>
-
   </div>
 </section>
 
 <section class="bg-black text-white py-5">
   <div class="container">
     <div class="row align-items-center">
+
       <!-- Image Section -->
       <div class="col-lg-6 mb-4 mb-lg-0">
         <img src="assets/business-people-meeting-conference-corporate-conce-2023-11-27-05-22-54-utc_result_11zon-2048x2048.webp" alt="Business Meeting" class="img-fluid rounded">
@@ -484,6 +490,7 @@
     </div>
   </div>
 </section>
+
 <!--Next Section -->
 <section class="container-fluid bg-black py-5">
   <div class="container d-flex justify-content-center">
@@ -495,7 +502,7 @@
           expertise, and support you need to transform your business and achieve your full 
           potential in today’s competitive market.
         </p>
-        <a href="#contact" class="btn btn-light fw-bold mt-4 px-4 py-2">Contact Us</a>
+        <a href="contact.html" class="btn btn-light fw-bold mt-4 px-4 py-2">Contact Us</a>
       </div>
     </div>
   </div>
@@ -512,50 +519,56 @@
           success stories highlight how our comprehensive support, tailored strategies, and expert guidance have transformed
           their businesses, helping them achieve their goals and thrive in competitive markets.
         </p>
-        <a href="#testimonials" class="btn btn-light fw-bold mt-3 px-4 py-2">View More</a>
+        <a href="https://www.trustpilot.com/review/formllc.us" class="btn btn-light fw-bold mt-3 px-4 py-2">View More</a>
       </div>
 
       <div class="col-lg-6">
   <div class="position-relative">
     <!-- Carousel -->
-    <div id="testimonialCarousel" class="carousel slide text-center px-5" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <div class="mb-3">
-            <div class="bg-orange text-white rounded-circle d-inline-flex align-items-center justify-content-center" style="width: 50px; height: 50px;">n</div>
-          </div>
-          <p class="fst-italic">Great works, really applicable. They did my works of LLC within a day. Nice to their commitment and professionalism.</p>
-          <h6 class="text-success mb-0">Nushrat Jahan</h6>
-          <small class="text-white-50">Trustpilot</small>
+<div class="container">
+  <div id="testimonialCarousel" class="carousel slide text-center px-md-5 px-3" data-bs-ride="carousel">
+    <div class="carousel-inner">
+
+      <!-- Testimonial 1 -->
+      <div class="carousel-item active">
+        <div class="mb-3">
+          <div class="bg-orange text-white rounded-circle d-inline-flex align-items-center justify-content-center" style="width: 50px; height: 50px;">n</div>
         </div>
-        <div class="carousel-item">
-          <div class="mb-3">
-            <img src="https://user-images.trustpilot.com/6719e9cba9082b3eaf6c6cbc/73x73.png" alt="User" class="rounded-circle" width="50" height="50">
-          </div>
-          <p class="fst-italic">Everything was smooth, didn’t know this is so easy. Just provided them information in the morning and by 7pm received email of company registration...</p>
-          <h6 class="text-success mb-0">Shahid Khan</h6>
-          <small class="text-white-50">Trustpilot</small>
-        </div>
-        <div class="carousel-item">
-          <div class="mb-3">
-            <img src="https://fiverr-res.cloudinary.com/image/upload/f_auto,q_auto,t_profile_small/v1/attachments/profile/photo/e40f646c7aed55fe9f3471795ad40766-1636373966099/26c0a0f3-cada-4d2b-978c-d301dd3ff223.jpeg" alt="User" class="rounded-circle" width="50" height="50">
-          </div>
-          <p class="fst-italic">Superrr & Perfecttt – Tousif Akram is very cooperative and reported every step of work, especially for Non-US biz in the United States.</p>
-          <h6 class="text-success mb-0">sn_skennova (Thailand)</h6>
-          <small class="text-white-50">Fiverr</small>
-        </div>
+        <p class="fst-italic">Great works, really applicable. They did my works of LLC within a day. Nice to their commitment and professionalism.</p>
+        <h6 class="text-success mb-0">Nushrat Jahan</h6>
+        <small class="text-white-50">Trustpilot</small>
       </div>
 
-      <!-- Carousel Controls -->
-      <button class="carousel-control-prev position-absolute top-50 translate-middle-y start-0 ms-n4" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="prev" style="z-index: 10;">
-        <span class="carousel-control-prev-icon bg-dark rounded-circle p-2" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next position-absolute top-50 translate-middle-y end-0 me-n4" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="next" style="z-index: 10;">
-        <span class="carousel-control-next-icon bg-dark rounded-circle p-2" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
+      <!-- Testimonial 2 -->
+      <div class="carousel-item">
+        <div class="mb-3">
+          <img src="https://user-images.trustpilot.com/6719e9cba9082b3eaf6c6cbc/73x73.png" alt="User" class="rounded-circle" width="50" height="50">
+        </div>
+        <p class="fst-italic">Everything was smooth, didn’t know this is so easy. Just provided them information in the morning and by 7pm received email of company registration...</p>
+        <h6 class="text-success mb-0">Shahid Khan</h6>
+        <small class="text-white-50">Trustpilot</small>
+      </div>
+
+      <!-- Testimonial 3 -->
+      <div class="carousel-item">
+        <div class="mb-3">
+          <img src="https://fiverr-res.cloudinary.com/image/upload/f_auto,q_auto,t_profile_small/v1/attachments/profile/photo/e40f646c7aed55fe9f3471795ad40766-1636373966099/26c0a0f3-cada-4d2b-978c-d301dd3ff223.jpeg" alt="User" class="rounded-circle" width="50" height="50">
+        </div>
+        <p class="fst-italic">Superrr & Perfecttt – Tousif Akram is very cooperative and reported every step of work, especially for Non-US biz in the United States.</p>
+        <h6 class="text-success mb-0">sn_skennova (Thailand)</h6>
+        <small class="text-white-50">Fiverr</small>
+      </div>
     </div>
+
+    <!-- Carousel Controls -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="prev" style="left: -2rem;">
+      <span class="carousel-control-prev-icon bg-dark rounded-circle p-2" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="next" style="right: -2rem;">
+      <span class="carousel-control-next-icon bg-dark rounded-circle p-2" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
 </div>
 
@@ -575,6 +588,7 @@
     </div>
   </div>
 </section>
+
 <!--contact us-->
 <section class="py-1 bg-black text-white">
   <div class="container">
