--- a/FAQs.html
+++ b/FAQs.html
@@ -188,7 +188,7 @@
           <input type="email" class="form-control" placeholder="Enter your email address" required>
         </div>
         <div class="col-auto">
-          <button type="submit" class="btn btn-primary px-4">Sign Up</button>
+          <button type="submit" class="btn btn-primary px-4">Subscribe</button>
         </div>
       </form>
     </div>
